--- a/specs/group_policy.yaml
+++ b/specs/group_policy.yaml
@@ -201,6 +201,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /user/role/group/bulk:
+    delete:
+      summary: Delete multiple permission groups in bulk
+      description: Deletes permission groups entities in bulk based on the provided criteria.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BulkDeleteRequest'
+      responses:
+        '200':
+          description: Successfully deleted groups
+          content:
+            application/json:
+              schema:
+                type: boolean
+        '400':
+          description: Bad request, invalid input
+        '404':
+          description: groups not found
+        '500':
+          description: Internal server error
 
 components:
   schemas:
@@ -280,3 +303,43 @@ components:
         totalCount:
           type: integer
           description: total number of results satisfying the conditions
+
+    BulkDeleteRequest:
+      type: object
+      properties:
+        ids:
+          type: array
+          items:
+            type: integer
+            format: int32
+          description: Array of group IDs to be deleted
+        listingRequest:
+          $ref: '#/components/schemas/ListingRequest'
+    ListingRequest:
+      type: object
+      properties:
+        searchKey:
+          type: string
+          description: Search key for filtering
+        sortOrder:
+          type: string
+          enum:
+            - ASC
+            - DESC
+          description: Sorting order
+        sortBy:
+          type: string
+          enum:
+            - name
+          description: Attribute to sort by
+        offset:
+          type: integer
+          format: int32
+          description: Starting index for fetching listings
+        size:
+          type: integer
+          format: int32
+          description: Number of listings to fetch
+        showAll:
+          type: boolean
+          description: Show all listings
