wip: adding material dtos and refactoring

--- a/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
+++ b/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
@@ -816,7 +816,7 @@ components:
           type: integer
           description: "approval request id"
         approvalRuntimeState:
-          type: integer
+          type: string
           example: "AWAITING or PROMOTED or CANCELLED or STALE"
           description: "approval runtime state"
 
