--- a/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
+++ b/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
@@ -218,8 +218,8 @@ paths:
           in: query
           schema:
             type: integer
-          description: "workflow id, this is required if fetchRequestsForMe is true"
-        - name: selfPendingOnly
+          description: "workflow id, this is required if pendingForCurrentUser is true"
+        - name: pendingForCurrentUser
           in: query
           schema:
             type: boolean
