--- a/specs/user_policy.yaml
+++ b/specs/user_policy.yaml
@@ -186,9 +186,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                items:
-                  $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/User'
         default:
           description: unexpected error
           content:
@@ -233,10 +231,10 @@ components:
         email_id:
           type: string
           description: Unique valid email-id of user, comma separated emails ids for multiple users
-        groups:
+        userRoleGroups:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/UserRoleGroupItem'
         roleFilters:
           type: array
           items:
@@ -264,10 +262,10 @@ components:
         email_id:
           type: string
           description: Unique valid email-id of user, comma separated emails ids for multiple users
-        groups:
+        userRoleGroups:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/UserRoleGroupItem'
         roleFilters:
           type: array
           items:
@@ -354,8 +352,24 @@ components:
         showAll:
           type: boolean
           description: Show all listings
-
-
+    UserRoleGroupItem:
+      type: object
+      properties:
+        roleGroup:
+          $ref: '#/components/schemas/RoleGroup'
+    RoleGroup:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: The ID of the role group
+        name:
+          type: string
+          description: The name of the role group
+        description:
+          type: string
+          description: The description of the role group
 
     Error:
       required:
